# panoptic_mapping

./: .gdbinit  panoptic_mapping.rosinstall  panoptic_mapping_https.rosinstall  panoptic_mapping_ssh.rosinstall
panoptic_mapping_utils/: CMakeLists.txt
panoptic_mapping_utils/app/: panmap_to_ply.cpp  trajectory_evaluation.cpp
panoptic_mapping_utils/config/: drift_hell.yaml  drift_light.yaml  drift_moderate.yaml  drift_none.yaml  drift_severe.yaml  drift_strong.yaml
panoptic_mapping_utils/config/evaluation_experiments/: background_per_n_ticks.yaml  experiments_drift.yaml  experiments_interpolation.yaml  experiments_w_wo_alignment.yaml  experiments_w_wo_interpolation.yaml  t_c_r_evaluation.yaml  voxgraph_experiments.bash
panoptic_mapping_utils/config/evaluation_scenarios/: evaluate_experiment_panmaps.py  get_groundtruth_panmap.bash
panoptic_mapping_utils/config/voxblox/: voxblox_temporal_window.yaml
panoptic_mapping_utils/config/voxgraph/: .gitignore  voxgraph_mapper.yaml
panoptic_mapping_utils/launch/: evaluate_panmap.launch  evaluate_series.launch  evaluate_trajectory.launch  generate_flat_dataset.launch  noise_config.yml  panmap_to_ply.launch  play_flat_dataset.launch  play_flat_dataset_with_drift.launch  play_noisy_flat_dataset.launch
panoptic_mapping_utils/src/drift_generator/: create_noise.py  drift_generator.cpp  drift_generator_node.cpp  noise.txt
panoptic_mapping_utils/src/evaluation/: plot_path.py  plot_trajectories.py  run_evaluations.py  trajectory_evaluator.cpp
panoptic_mapping_utils/src/flat_dataset/: drift_generator.py  flat_data_player.py  (+2 more)
(+117 files in other folders)
